[gd_scene load_steps=4 format=2]

[ext_resource path="res://MicroTimer.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MicroTimer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 172.0
margin_bottom = 98.0

[node name="Timer" type="HBoxContainer" parent="Container"]
margin_right = 172.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Hour" type="Label" parent="Container/Timer"]
margin_right = 44.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "00"
align = 1
valign = 2

[node name="Semicolon" type="Label" parent="Container/Timer"]
margin_left = 44.0
margin_right = 63.0
margin_bottom = 54.0
size_flags_vertical = 3
text = ":"
align = 1
valign = 2

[node name="Minute" type="Label" parent="Container/Timer"]
margin_left = 63.0
margin_right = 108.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "00"
align = 1
valign = 2

[node name="Semicolon2" type="Label" parent="Container/Timer"]
margin_left = 108.0
margin_right = 127.0
margin_bottom = 54.0
size_flags_vertical = 3
text = ":"
align = 1
valign = 2

[node name="Second" type="Label" parent="Container/Timer"]
margin_left = 127.0
margin_right = 172.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "00"
align = 1
valign = 2

[node name="Controls" type="HBoxContainer" parent="Container"]
margin_top = 58.0
margin_right = 172.0
margin_bottom = 94.0

[node name="Spacer" type="Control" parent="Container/Controls"]
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="Container/Controls"]
margin_left = 4.0
margin_right = 84.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 36 )
focus_mode = 0
text = "Go!"

[node name="StopButton" type="Button" parent="Container/Controls"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 36 )
focus_mode = 0
disabled = true
text = "Stop"

[node name="Spacer2" type="Control" parent="Container/Controls"]
margin_left = 172.0
margin_right = 172.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="Container"]
margin_top = 98.0
margin_right = 172.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="."]
margin_left = 176.0
margin_right = 190.0
margin_bottom = 98.0
rect_min_size = Vector2( 14, 0 )

[node name="CloseButton" type="Button" parent="Spacer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )
focus_mode = 0
size_flags_horizontal = 8
custom_styles/normal = SubResource( 1 )
text = "Ã—"

[connection signal="gui_input" from="." to="." method="_on_MicroTimer_gui_input"]
[connection signal="pressed" from="Container/Controls/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Container/Controls/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="Spacer/CloseButton" to="." method="_on_CloseButton_pressed"]
